data/derived/fa15/progs/unify/prog0885.ml.out
Characters 139-140:
  List.fold_left f base l;;
                 ^
Error: This expression has type int -> string -> string
       but an expression was expected of type int -> string -> int
       Type string is not compatible with type int 
